Replaced legacy URL constructor by URI.toURL() method